- update styling to support CTR and Serving Fraction - update test image on test page - consolidated constants and enumerated types into `shared.js` (renaming some for clarity) - fixed Access Token goes missing error (fix attempt #2) - better debugging messages - whitespace - new function _ajaxParticleStats to pull statistics for a specific video ID - ignore list now contains our own updated/inserted nodes - some new formatting functions - upgraded jQuery to 2.2.0

--- a/css/neonscope.css
+++ b/css/neonscope.css
@@ -28,6 +28,8 @@
 .neonscope-nav,
 .neonscope-paging,
 .neonscope-score,
+.neonscope-serving-frac,
+.neonscope-ctr,
 .neonscope-enabled {
     box-sizing: border-box;
     position: absolute;
@@ -229,6 +231,30 @@
 }
 
 .neonscope-paging:hover {
+    background-color: #000;
+}
+
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+
+.neonscope-ctr {
+    bottom: 4px;
+    right: 4px;
+    color: gold;
+}
+
+.neonscope-ctr:hover {
+    background-color: #000;
+}
+
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
+
+.neonscope-serving-frac {
+    bottom: 50%;
+    left: 50%;
+    color: gold;
+}
+
+.neonscope-serving-frac:hover {
     background-color: #000;
 }
 
